project_puppies/css/style.css
body,
html,
ul {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Coiny", cursive;
  list-style: none;
  scroll-behavior: smooth;
}

/* ADD */
.add {
  background-color: #36c1f1;
  color: #ffffff;
  height: 5%;
  padding: 10px;
}
.add p {
  margin: 0 auto;
  text-align: center;
  text-transform: uppercase;
}
.fa-gift {
  font-size: 1.5rem;
  color: #ff0000;
  opacity: 0.6;
}
/* NAVIGATION BAR */
.navbar {
  position: sticky;
  top: 0;
  height: 25%;
  padding: 20px;
  grid-area: navigation;
  background-color: #ffffff;
  display: flex;
  align-items: center;
  text-transform: capitalize;
  z-index: 1;
}
.logo {
  flex: 1;
}
.fa-socks {
  font-size: 2rem;
  color: #20d1f5;
}
.navbar-items {
  display: flex;
  flex-wrap: wrap;
}

.navbar-items li a {
  margin: 25px;
  text-decoration: none;
  padding: 15px;
  color: #000000;
  background-color: #ffffff;
  transition: background-color, color 0.8s ease;
}
.navbar-items li a:hover {
  background-color: #36c1f1;
  text-decoration: none;
  color: #ffffff;
  padding: 15px;
}
.btn button a {
  text-decoration: none;
  color: #ffffff;
}
.toggle {
  display: none;
}
#toggle {
  display: none;
}

/* BACKGROUND  */
.background {
  background-image: url("../img/background.jpg");
  height: 100vh;
  background-position: center;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 50px;
}
.background .background-content {
  color: #ffffff;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.background .background-content h1 {
  font-size: 2.5rem;
  text-transform: uppercase;
  font-weight: bold;
}
.background .background-content h2 {
  padding-bottom: 20px;
  font-size: 2rem;
  font-weight: lighter;
  text-align: center;
}
.background .background-content .btn button {
  background-color: #4bc7f3;
  border: none;
  padding: 15px;
  border-radius: 20px;
  text-decoration: none;
  color: white;
  font-size: 1.5rem;
  cursor: pointer;
  text-transform: uppercase;
  font-weight: bold;
  transform: translateY(0);
  transition: transform 0.7s ease;
}
.background .background-content .btn button:hover {
  transform: translateY(-5%);
}

/* PRODUCTS */
.products {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}
main h1 {
  text-align: center;
  text-transform: uppercase;
  font-size: 2.5rem;
}

.card {
  position: relative;
  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
  transition: box-shadow 0.5s ease;
  margin-bottom: 50px;
}
.card:hover {
  box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.7);
}
.card-img img {
  height: 350px;
  width: 300px;
}
.card-info {
  position: absolute;
  top: 10px;
  left: 10px;
  font-size: 1.4rem;
  text-transform: uppercase;
  color: #ffffff;
}
.card-body {
  text-align: center;
  padding: 15px;
  margin: 15px;
  font-size: 1.5rem;
}
.card-title a {
  text-decoration: none;
  color: #36c1f1;
}
.card-price-presale {
  text-decoration: line-through;
  color: gray;
  font-weight: lighter;
}

/* SHOP BUTTON */
.btn button {
  background-color: #ffb81f;
  border: none;
  padding: 15px;
  border-radius: 20px;
  text-decoration: none;
  color: white;
  font-size: 1.5rem;
  cursor: pointer;
  text-transform: uppercase;
  font-weight: bold;
  transform: translateY(0);
  transition: transform 0.5s ease;
}
.shop .btn button:hover {
  transform: translateY(-5%);
}
.shop {
  display: flex;
  justify-content: center;
  align-items: center;
  /* margin-bottom: 20px; */
}
/* ABOUT */
.about {
  margin: 20px 0;
}
.about-comment {
  display: flex;
}
.about-comment p {
  margin: 10px;
  text-align: justify;
  align-self: center;
}
.about-comment img {
  height: 300px;
  width: 300px;
  border-radius: 50%;
}
/* FOOTER */
.contact {
  background: #2cc3f2;
  padding: 30px;
  margin-top: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.contact .fa-socks {
  color: white;
  font-size: 2.5rem;
}

/* MEDIA QUERIES */

@media all and (max-width: 730px) {
  .toggle {
    position: absolute;
    float: right;
    top: 10px;
    right: 20px;
    display: block;
    font-size: 1.8rem;
    color: #2cc3f2;
  }

  #toggle {
    display: none;
  }
  .navbar-items {
    display: none;
  }
  .navbar-items li {
    display: flex;
  }

  #toggle:checked + .navbar-items {
    display: block;
    flex-direction: column;
  }
  .card {
    margin: 10px;
  }

  .about-comment {
    align-items: center;
  }

  .about-comment img {
    max-height: 75px;
    max-width: 75px;
    border-radius: 50%;
  }
  .contact {
    margin-top: 20px;
  }
}

